@@ -85,6 +85,7 @@ class AppStore(gtk.GenericTreeModel):
         self.db = db
         self.icons = icons
         self.apps = []
+        self.app_index_map = dict()
         self.sorted = sort
         self.filter = filter
         self._searches_sort_mode = self._get_searches_sort_mode()
@@ -98,6 +99,10 @@ class AppStore(gtk.GenericTreeModel):
                 pkgname = db.get_pkgname(doc)
                 self.apps.append(Application(appname, pkgname))
             self.apps.sort()
+            app_index = 0
+            for app in self.apps:
+                self.app_index_map[app.key()] = app_index
+                app_index = app_index + 1
         else:
             # we support single and list search_queries, 
             # if list we append them one by one
@@ -118,6 +123,7 @@ class AppStore(gtk.GenericTreeModel):
                 else:
                     matches = enquire.get_mset(0, limit)
                 logging.debug("found ~%i matches" % matches.get_matches_estimated())
+                app_index = 0
                 for m in matches:
                     doc = m[xapian.MSET_DOCUMENT]
                     if "APPVIEW_DEBUG_TERMS" in os.environ:
@@ -135,8 +141,15 @@ class AppStore(gtk.GenericTreeModel):
                     if not app in already_added:
                         self.apps.append(app)
                         already_added.add(app)
+                        if not sort:
+                            self.app_index_map[app.key()] = app_index
+                            app_index = app_index + 1
             if sort:
                 self.apps.sort()
+                app_index = 0
+                for app in self.apps:
+                    self.app_index_map[app.key()] = app_index
+                    app_index = app_index + 1
     def is_filtered_out(self, filter, doc):
         """ apply filter and return True if the package is filtered out """
         pkgname = self.db.get_pkgname(doc)
