@@ -1328,8 +1328,6 @@ class NavigationBar(PathBar):
             self.queue_draw_area(*part.get_allocation_tuple())
         else:
             part = PathPart(label, callback)
-            # mvo please check this:  the following seems redundant, so removing (gml)
-            # part.callback(self)
             part.set_pathbar(self)
             self.id_to_part[id] = part
             gobject.timeout_add(50, self.append, part)
